--- a/automated-build-react/package.json
+++ b/automated-build-react/package.json
@@ -4,10 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack serve --mode development --open",
+    "lint": "eslint .",
+    "test": "jest",
+    "dev": "npm run lint && webpack serve --mode development --open",
     "prebuild": "if exist dist (rmdir /s /Q dist)",
-    "build": "webpack --mode production",
+    "build": "npm run lint && webpack --mode production",
     "postbuild": "copy public\\index.html dist\\index.html & xcopy /si public\\css dist\\css"
   },
   "author": "",
@@ -16,7 +17,13 @@
     "@babel/core": "^7.20.12",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
+    "@testing-library/react": "^13.4.0",
     "babel-loader": "^9.1.2",
+    "eslint": "^8.33.0",
+    "eslint-plugin-react": "^7.32.2",
+    "jest": "^29.4.1",
+    "jest-environment-jsdom": "^29.4.1",
+    "prop-types": "^15.8.1",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.11.1"
